--- a/style.css
+++ b/style.css
@@ -793,7 +793,8 @@ a:active {
 .page-content,
 .entry-content,
 .entry-summary {
-	margin: 1.5em 0 0;
+	/*margin: 1.5em 0 0;*/
+
 }
 
 .page-links {
