--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: http://underscores.me/
 Author: Underscores.me
 Author URI: http://underscores.me/
 Description: Description
-Version: 1.0.0
+Version: 1.1.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: starship
@@ -430,9 +430,9 @@ input[type="submit"] {
 	box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.5), inset 0 15px 17px rgba(255, 255, 255, 0.5), inset 0 -5px 12px rgba(0, 0, 0, 0.05);
 	color: rgba(0, 0, 0, .8);
 	font-size: 12px;
-	font-size: 0.75rem;
+	font-size: 1.75rem/*0.75rem*/;
 	line-height: 1;
-	padding: .6em 1em .4em;
+	padding: .6em 1em /*.4em*/.6em;
 	text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
 }
 
@@ -876,54 +876,29 @@ object {
 	text-align: center;
 }
 
-/*--------------------------------------------------------------
-## Galleries
---------------------------------------------------------------*/
-.gallery {
-	margin-bottom: 1.5em;
+/*TEST*/
+/*Увеличение размера между элементами для содержания статей*/
+@media only screen
+and (max-width : 783px) {
+  div#toc_container {
+   line-height: 35px !important;
+font-size:18px !important;
+}
 }
 
-.gallery-item {
-	display: inline-block;
-	text-align: center;
-	vertical-align: top;
-	width: 100%;
+/*Размер между элементами кнопок поделиться*/
+.ya-share2__list_direction_horizontal > .ya-share2__item {
+    padding: 5px;
 }
 
-.gallery-columns-2 .gallery-item {
-	max-width: 50%;
-}
 
-.gallery-columns-3 .gallery-item {
-	max-width: 33.33%;
-}
+.post-ratings IMG, .post-ratings-loading IMG, .post-ratings-image IMG {
+		padding: 5px;
+	}
+@media screen and (max-width: 767px) {
 
-.gallery-columns-4 .gallery-item {
-	max-width: 25%;
-}
+	.post-ratings IMG, .post-ratings-loading IMG, .post-ratings-image IMG {
+	    padding: 10px;
+	}
 
-.gallery-columns-5 .gallery-item {
-	max-width: 20%;
 }
-
-.gallery-columns-6 .gallery-item {
-	max-width: 16.66%;
-}
-
-.gallery-columns-7 .gallery-item {
-	max-width: 14.28%;
-}
-
-.gallery-columns-8 .gallery-item {
-	max-width: 12.5%;
-}
-
-.gallery-columns-9 .gallery-item {
-	max-width: 11.11%;
-}
-
-.gallery-caption {
-	display: block;
-}
-
-/*test*/
